docs: Updated README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ else()
             signup.cpp
             signup.h
             adminpanel.h adminpanel.cpp adminpanel.ui
+            LICENSE
+            README.md
         )
     endif()
 endif()
