feature: added writing sign up messages to logs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ else()
             adminpanel.h adminpanel.cpp adminpanel.ui
             LICENSE
             README.md
+            Resources/icon.jpeg
+            cfg/config
         )
     endif()
 endif()
