feature: added resources file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ else()
             LICENSE
             README.md
             favicon.ico
+            resourses.qrc
         )
     endif()
 endif()
