--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(PROJECT_SOURCES
         signup.cpp signup.h
         adminpanel.h adminpanel.cpp adminpanel.ui
         arbiter.h arbiter.cpp arbiter.ui
+        resourses.qrc
         LICENSE
 )
 
