Project: added OpenCV into project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+find_package(OpenCV REQUIRED)
+message(STATUS "OpenCV found: ${OpenCV_VERSION}")
+message(STATUS "Include dirs: ${OpenCV_INCLUDE_DIRS}")
+message(STATUS "Libraries: ${OpenCV_LIBS}")
+include_directories(${OpenCV_INCLUDE_DIRS})
+
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
@@ -51,6 +57,7 @@ else()
     endif()
 endif()
 
+target_link_libraries(yet-another-sign-up PRIVATE ${OpenCV_LIBS})
 target_link_libraries(yet-another-sign-up PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
